--- a/bms.html
+++ b/bms.html
@@ -169,12 +169,20 @@
 							<td class="td-left">差分企画 <a href="https://darksabun.github.io/bceg/event/atoz2020/">Initial A to Z 2020</a> 参加</td>
 						</tr>
 						<tr>
+							<td>★18</td>
+							<td class="td-left"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&bmsid=290427">Lost [final]</a></td>
+							<td class="td-left"><a href="https://manbow.nothing.sh/event/event.cgi?action=More_def&num=34&event=123">Quark</a></td>
+							<td><a href="https://drive.google.com/file/d/1hioE7F-rvppskuyRDckmHIU989PikaWS/view?usp=sharing"><i
+								class="fas fa-arrow-down"></i></a></td>
+							<td class="td-left">差分企画 <a href="https://twitter.com/100mFumenCookin">100min Fumen Cooking!!</a> 参加</td>
+						</tr>
+						<tr>
 							<td>★?</td>
 							<td class="td-left"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&bmsid=287059">NASAJUKE [MAX]</a></td>
 							<td class="td-left"><a href="https://mega.nz/folder/IP4iTAyI#jkwvNbkccH-EUATbGI4SWg/folder/ZPpEnSQK">Nakaiankow</a></td>
 							<td><a href="https://drive.google.com/file/d/1h8cmYluFrfr3LRzefqMPk7MPSRsKIFgx/view?usp=sharing"><i
 								class="fas fa-arrow-down"></i></a></td>
-							<td class="td-left"></td>
+							<td class="td-left">差分企画 <a href="https://darksabun.github.io/bceg/event/1998to2020/">1998 to 2020 (仮)</a> 参加</td>
 						</tr>
 						<tr>
   <td>★17</td>
